[package]
name = "endec"
version = "0.1.0"
authors = ["Simpson Carlos<simpsoncarlos3@gmail.com>"]
description = "A simple command-line tool for encrypting and decrypting strings using AES encryption with a password."
license = "MIT OR Apache-2.0"
repository = "https://github.com/simpsoncarlos3/endec"
readme = "README.md"
keywords = ["encryption", "decryption", "aes", "command-line", "tool", "password"]
categories = ["command-line-utilities", "cryptography"]
edition = "2021"

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4"
